# member

./: .env.example  .gitignore  ADMIN_UI_NAV_AUDIT.md  ADMIN_UI_REDESIGN.md  ADMIN_UI_STRUCTURE.md  ADMIN_UI_VISUAL_ANALYSIS.md  ADMIN_UI_WORKBENCH_AUDIT.md  AGENTS.md  COMPONENT_MAP.md  LICENSE  Member_LLM_Integrated_Spec_V1.md  PR_PLAN.md  README.md  SECURITY.md  STATE_MACHINE.md  TODO_PHASE0.md  TODO_PHASE1.md  TODO_PHASE2.md  TODO_PHASE3.md  UI_AUDIT_MASTER.md  UI_GAP_AND_INCONSISTENCY_REPORT.md  UI_NAV_AND_ACTION_FLOW.md  UI_REDRAW.md  UI_VISUAL_HIERARCHY_AUDIT.md  firestore.rules  member_us_assignment_llm_contract_pack.yaml  package-lock.json  package.json  ui_api_binding_matrix.json  ui_control_registry.json  ui_control_registry_v2.json  ui_copy_catalog.json  ui_copy_catalog_v2.json  ui_design_token_usage.json  ui_layout_metrics.json  ui_layout_metrics_v2.json  ui_permission_visibility_matrix.json  ui_permission_visibility_matrix_v2.json  ui_screenshot_evidence_index_v2.json  ui_state_matrix.json  (+3 more)
tools/line_desktop_patrol/: README.md  desktop_ui_bridge.js  desktop_ui_bridge.swift  pyproject.toml  read_repo_runtime_state.js  run_desktop_self_improvement_batch.js  run_local_mcp_tool.js  run_mcp_server.sh  scaffold_operator_bundle.js  send_text_bridge.js  validate_scaffold.js
tools/line_desktop_patrol/config/: acceptance.manual.example.json  allowed_targets.example.json  policy.example.json
tools/line_desktop_patrol/launchd/: com.member.line-desktop-patrol.execute-loop.plist.example
tools/line_desktop_patrol/scenarios/: smoke_dry_run.example.json  strategic_self_improvement_batch_v1.json  strategic_self_improvement_explore_library_v1.json
tools/line_desktop_patrol/src/member_line_patrol/: __init__.py  acceptance_gate.py  doctor.py  dry_run_harness.py  enqueue_eval_proposals.py  execute_harness.py  execute_loop.py  loop_state.py  macos_adapter.py  mcp_server.py  patrol_loop.py  policy.py  promote_proposal.py  proposal_builder.py  proposal_queue.py  retention.py  runtime_state.py  scenario_loader.py  synthesize_code_apply_draft.py  synthesize_code_apply_evidence.py  (+10 more)
(+4229 files in other folders)
