[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "member-line-desktop-patrol"
version = "0.1.0"
description = "Local-only scaffold for the Member LINE Desktop patrol sidecar"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
member-line-desktop-patrol-manifest = "member_line_patrol.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
