[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "member-line-desktop-patrol"
version = "0.3.0"
description = "Local-only MCP patrol sidecar for LINE API and desktop UI self-evaluation loops"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
member-line-desktop-patrol = "member_line_patrol.mcp_server:serve_main"
member-line-desktop-patrol-manifest = "member_line_patrol.mcp_server:manifest_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
